syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.project.grpc.smartoffices.window";
option java_outer_classname = "SmartWindowServiceImpl";
package SmartOffices;


service SmartWindow {
  // Bidirectional streaming RPC: Both client and server send and receive a stream of messages.
  rpc ControlWindows(stream WindowRequest) returns (stream WindowResponse);

  // Server-side streaming RPC for the GUI
  rpc StreamWindowStatus(WindowRequest) returns (stream WindowResponse);
}

message WindowRequest {
  string windDirection = 1;
  double windSpeed = 2;
  double windTemperature = 3;
}

message WindowResponse {
  bool windowStatus = 1; // True if window is closed, False if open
  double windSpeed = 2;
}

