syntax = "proto3";

service SmartHeating {
  rpc SetTemperature (TemperatureRequest) returns (TemperatureResponse) {}
  // Add more RPCs for controlling heating
}

message TemperatureRequest {
  int32 floor = 1;
  int32 room = 2;
  float temperature = 3;
}

message TemperatureResponse {
  string status_message = 1;
}

